k8s/external-dns.yaml
---
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: external-dns
  namespace: external-dns
  labels:
    app: external-dns
spec:
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app: external-dns
    spec:
      serviceAccountName: external-dns
      containers:
      - name: external-dns
        image: registry.opensource.zalan.do/teapot/external-dns:v0.5.6
        args:
        - --source=service
        - --source=ingress
        - --provider=google
        - --google-project=${tools_project}
        - --policy=upsert-only 
        - --registry=txt
        - --txt-owner-id=external-dns
